--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -1,5 +1,136 @@
 {{include file='common/head.html'}}
-<link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}images/css.css" type="text/css"/>
+<style>
+/* 定义全局变量 */
+body {
+margin: 0px;
+font-size:12px;
+line-height:150%;
+background:#F6F4F5;
+font-family: "宋体";
+}
+a:link {color: #003366;text-decoration: none;}
+a:visited {color: #003366;text-decoration: none;}
+a:hover {color: #DB1333;text-decoration: underline;}
+a:active {color: #2583EA;text-decoration: none;}
+.right {text-align:left;padding-left:10px;}
+.right_h {text-align:left;padding-left:30px;}
+.right_n {text-align:right;padding-left:30px;}
+.right_r{text-align:left;padding-left:40px;}
+.white  {color: #FFFFFF}
+.right_r {text-align:left;padding-right:5px;}
+td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
+.td_font {font-family: Arial, Helvetica, sans-serif;font-size: 14px;}
+.fl_le{ float:left}
+.fl_ri{ float:right}
+
+
+.left_box {BORDER-RIGHT: #C2C2C2 1px solid; BORDER-TOP: #C2C2C2 1px solid; BACKGROUND: #fafcff; MARGIN: 0px 0px 6px; BORDER-LEFT: #C2C2C2 1px solid; BORDER-BOTTOM: #C2C2C2 1px solid;}
+.left_box_host {BORDER-RIGHT: #C2C2C2 1px solid; BORDER-TOP: #FFFFFF 1px solid; BACKGROUND: #fafcff; MARGIN: 0px 0px 6px; BORDER-LEFT: #C2C2C2 1px solid; BORDER-BOTTOM: #C2C2C2 1px solid;}
+.error_box {BORDER-RIGHT: #E1DDDD 1px solid; BORDER-TOP: #E1DDDD 1px solid; BACKGROUND: #fafcff; MARGIN: 0px 0px 6px; BORDER-LEFT: #E1DDDD 1px solid; BORDER-BOTTOM: #E1DDDD 1px solid;}
+.mar_h{ padding-bottom:10px;}
+.Left_main {FLOAT: left; WIDTH: 263px;}
+.Left_main_vh {FLOAT: left; WIDTH: 213px;}
+.Left_main_vh2 {FLOAT: left; WIDTH: 225px;}
+.right_main_host {FLOAT: left; WIDTH: 240px;}
+.right_host_vh {FLOAT: left; WIDTH: 243px;}
+.Left_main_vh3 {FLOAT: left; WIDTH: 5px;}
+.right_main {FLOAT: left; margin-left:5px;}
+.bgcolor_left{background-color:#E0E0E0;}
+.bgcolor_left2{background-color:#ffffff;}
+#table_t {width:85%; border:0px; line-height:20px;}
+#table_r {width:100%; border:0px;}
+#table_news{width:680px; border:0px;}
+#table_rr {width:100%; border:0px; line-height:24px;}
+.index_bg{background-image:url({{$STATIC}}images/box_tl3.jpg); background-repeat:repeat-x; width:263px;margin:0 auto; margin-bottom:0px; height:223px;}
+.left_bg_help{background-image:url({{$STATIC}}images/box_tl5.jpg); background-repeat:repeat-x; width:263px;margin:0 auto; margin-bottom:0px; height:160px;}
+.left_bg_vh{background-image:url({{$STATIC}}images/box_tl8.jpg); background-repeat:repeat-x; width:263px;margin:0 auto; margin-bottom:0px; height:160px;}
+.left_bg_lei{background-image:url({{$STATIC}}images/box_tl8.jpg); background-repeat:repeat-x; width:263px;margin:0 auto; margin-bottom:0px; height:160px;}
+.left_bg_foot{background-image:url({{$STATIC}}images/box_tl5.jpg); background-repeat:repeat-x; width:960px;margin:0 auto; margin-bottom:0px; height:120px;}
+.left_bg{background-image:url({{$STATIC}}images/ne_1.jpg); background-repeat:repeat-x; width:74px; margin-top:7px; margin-left:10px; height:26px;}
+.left_vh{background-image:url({{$STATIC}}images/he_cio.jpg); background-repeat:repeat-x; width:201px; margin-top:0px; margin-left:0px; height:32px;}
+.left_reg{background-image:url({{$STATIC}}images/reg1.jpg); background-repeat:repeat-x; width:199px; margin-top:0px; margin-left:0px; height:396px;}
+.left_host{background-image:url({{$STATIC}}images/host_cio2.jpg); background-repeat:repeat-x; width:201px; margin-top:0px; margin-left:0px; height:32px;}
+.left_bg_gong{background-image:url({{$STATIC}}images/box_tl4.jpg); background-repeat:repeat-x; width:74px; margin-top:5px; margin-left:140px; height:24px;}
+.left_help_img{background-image:url({{$STATIC}}images/help.jpg); background-repeat:repeat-x; width:74px; margin-top:2px; margin-bottom:5px; margin-left:10px; height:26px;}
+.left_help_img2{background-image:url({{$STATIC}}images/rightmenu_titlebg.gif); background-repeat:repeat-x; width:200px; margin-top:2px; margin-bottom:5px; margin-left:0px; height:30px;}
+.left_help_service{background-image:url({{$STATIC}}images/help2.jpg); background-repeat:repeat-x; width:74px; margin-top:2px;  margin-bottom:5px; margin-left:10px; height:26px;}
+.left_host_vh{background-image:url({{$STATIC}}images/rightmenu_titlebg.jpg); background-repeat:repeat-x; width:242px; margin-left:10px; height:33px;}
+.left_top{padding-top:10px;padding-left:33px;}
+.right_reg{padding-left:33px;}
+.left_help_wid{padding-top:0px;padding-left:5px;}
+.left_host_wid{padding-top:0px;padding-left:0px;}
+.fontcolor{color:#4C4B4B;}
+.height_t{height:7px;}
+.topimg_1 {text-align:left;background:url({{$STATIC}}images/help_1.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
+.topimg_2 {text-align:left;background:url({{$STATIC}}images/help_2.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
+.topimg_3 {text-align:left;background:url({{$STATIC}}images/help_3.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
+.topimg_4 {text-align:left;background:url({{$STATIC}}images/help_4.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
+.topimg_5 {text-align:left;background:url({{$STATIC}}images/help_5.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
+.topimg_6 {text-align:left;background:url({{$STATIC}}images/help_6.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
+.topimg_7 {text-align:left;background:url({{$STATIC}}images/help_7.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
+.topimg_8 {text-align:left;background:url({{$STATIC}}images/help_8.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
+.topimg2 {text-align:left;background:url({{$STATIC}}images/service_pe.jpg) 0px no-repeat;line-height:82px;height:126px;width:137px;}
+.topimg_h {text-align:left;background:url({{$STATIC}}images/menu-dxt-red_bg.jpg) 0px no-repeat;line-height:30px;height:30px;width:7px;}
+.host_img {text-align:left;background:url({{$STATIC}}images/ico_tuijian.gif) 0px no-repeat;line-height:22px;padding-left:30px;}
+.host_vh {text-align:left;background:url({{$STATIC}}images/host_vh.jpg) 0px no-repeat;line-height:22px;padding-left:15px;}
+.left_dns {height:118px;width:262px;}
+.left_vip {height:121px;width:262px;}
+.left_vip2 {height:153px;width:262px;}
+.left_beiban {height:93px;width:262px;}
+.left_service_color{color:red;}
+.left_hg{height:140px;}
+.right_host_wid{width:130px;}
+.host_l{ width:185px; height:30px;}
+.mar_news{ margin-top:10px;}
+.f_size{ font-size:18px;}
+
+
+.right_top{padding-top:0px;padding-right:0px;}
+.topimg3 {text-align:left;background:url({{$STATIC}}images/dmain.jpg) 0px no-repeat;line-height:82px;height:223px;width:689px;}
+.host_bg {text-align:left;background:url({{$STATIC}}images/r_zj.jpg) 0px no-repeat;line-height:82px;height:281px;width:689px;}
+.host_bg_226 {text-align:left;background:url({{$STATIC}}images/r_zj_227.jpg) 0px no-repeat;line-height:82px;height:255px;width:226px;}
+.host_bg_vh {text-align:left;background:url({{$STATIC}}images/r_zj2.jpg) 0px no-repeat;line-height:82px;height:281px;width:750px;}
+.left_host_bg {text-align:left;background:url({{$STATIC}}images/leftbg.jpg) 0px no-repeat;line-height:82px;height:281px;width:689px;}
+.color_red{color:#FF0000;}
+.color_blue{color:#055676;}
+.color_orange{color:#D7631A;}
+.right_blue{color:#048ABF;}
+.right_hg{height:30px;}
+.right_hg2{height:23px;}
+.right_hg3{height:36px;}
+.right_wid{width:33%}
+.right_wid2{height:281px;width:686px;}
+.wid_menu{width:960px;}
+.wid_menu_vh{width:750px;}
+.host_wid{width:190px;}
+.l_host_wid{width:200px;}
+.host_top{padding-top:10px;}
+.wid_l{width:7px;}
+.wid_2{width:9px;}
+.heig_l{height:7px;}
+.heig_news{height:300px;}
+
+
+/*幻灯片*/
+.picshow { z-index:444; position:relative; background-color:#e4f2fa; width: 100%; height: 221px}
+.picshow_main {	position: relative; width: 681px; height: 281px}
+.picshow_main .imgbig { width: 681px; height: 281px}
+.picshow_change {position: absolute; text-align: left; bottom: -5px; height: 35px; right: 0px; left: 560px;}
+.picshow_change img {width:20px; height: 15px}
+.picshow_change a {	border: 1px solid; display: block; float: left; margin-right: 5px;  display: inline}
+.picshow_active {display:block}
+.picshow_unactive {display:none}
+a.axx {	border-color: #555}
+a.axx:hover {border-color: #000}
+a.axx img { opacity: 0.4; }
+a.axx:hover img { opacity: 1.0; }
+a.bxx {	border-color: #000}
+a.bxx:hover {border-color: #000}
+img{margin:0;padding:0;border:0;}
+#nav li:hover a.mainlevel, #nav li.sfhover a.mainlevel{
+        color: #333399;
+        background-color: #fff;}
+</style>
 <body>
 <!--幻灯片script代码开始-->
 <script language="javascript">
@@ -40,10 +171,9 @@
 <div><table id="table_r"><tr><td height="3"></td></tr></table></div>
 <div align="center">
 <div class="wid_menu">
-	<table class="table" cellpadding="0" cellspacing="0">
-		<form id="form1" name="form1" method="post" action="?c=session&a=login&refer=web" >
-		<tr>
-			<td colspan="2">
+	<table width="960" border="0" cellpadding="0" cellspacing="0" align="center">
+	<form id="form1" name="form1" method="post" action="?c=session&a=login&refer=web" >
+		<tr><td colspan="2">
 				{{if $role.user}}{{$role.user}},您好!  [<a href='?c=user&a=index'>进入会员中心</a>] [<a href='?c=session&a=logout'>退出</a>]{{else}}
 				用户名:
 				<input name="username" type="text" size="12" />
@@ -55,9 +185,8 @@
 				{{/if}}
 	  		</td>
 			<td align="right"><script language="javascript" src="?c=product&a=productList&target=self"></script></td>
-		</tr>
 		 <tr>
-			<td rowspan="2"><img src='{{if $setting.logo.value}}{{$setting.logo.value}}{{else}}{{$STATIC}}/images/logo.jpg{{/if}}' height="80"></td>
+			<td width="184" rowspan="2"><img src='{{if $setting.logo.value}}{{$setting.logo.value}}{{else}}{{$STATIC}}/images/logo.jpg{{/if}}' height="80"></td>
 			<td valign="top" align="left" class="right" width="500"></td><td valign="top"></td>
 		 </tr>
 	  </form>
@@ -72,32 +201,14 @@
 	    <td colspan="3">
 			<table width="100%" border="0" cellpadding="0" cellspacing="0">
 			  <tr>
-				<td height="42" background='{{$STATIC}}images/menu-dxt-red2.jpg' class="right_h white">
+				<td width="6" height="42"><img src='{{$STATIC}}images/menu-home-red1.jpg'></td>
+				<td background='{{$STATIC}}images/menu-dxt-red2.jpg' class="right_h white">
 					{{foreach from=$menus item=menu}}
 					<a href="{{$menu.1}}" class="mainlevel"><b><span class="td_font white">{{$menu.0}}</span></b></a>
 					&nbsp;&nbsp;<span class="right topimg_h">&nbsp;&nbsp;</span>
 		   			{{/foreach}}	
 				</td>
-			  </tr>
-		  </table>
-		</td>
-      </tr>
-	  
-	  
-	  <tr>
-	    <td colspan="3">
-			<table class="ml" width="100%" border="0" cellpadding="0" cellspacing="0" background='{{$STATIC}}images/menu-dxt-red2.jpg'>
-			  <tr>
-			  <td class="onmouse" id="lnkhome" classoff="overmouse" classon="onmouse" align="center" width="84">
-		 		 <div class="menu_top"><a class="mainmenu"  href="#">首 页</a></div></td>
-				     <td class="overmouse" id="lnkdomain" classoff="overmouse" classon="onmouse" align="center" width="84">
-		  <div class="menu_top"><a class="mainmenu"  href="#">域名注册</a></div></td>
-				<td height="42" class="right_h white">
-					{{foreach from=$menus item=menu}}
-					<a href="{{$menu.1}}" class="mainlevel"><b><span class="td_font white">{{$menu.0}}</span></b></a>
-					&nbsp;&nbsp;<span class="right topimg_h">&nbsp;&nbsp;</span>
-		   			{{/foreach}}	
-				</td>
+				<td width="6" height="42"><img src='{{$STATIC}}images/menu-home-red3.jpg'></td>
 			  </tr>
 		  </table>
 		</td>
@@ -105,31 +216,8 @@
 	</table>
 <div>
 </div>
-<!--菜单script代码开始-->
 
-<script  src='user/view/default/images/tabtable.js' type="text/javascript"></script>
-<script language="javascript">
-var TabTable1;
-function init1(){
-	var handles = 'lnkhome,lnkdomain,lnkhost,lnkhosthy,lnkcdnhost,lnkemail,youhui,lnkidc,lnkvps,help,autoweb,promote,daili';
-	var tables = 'lnkhome-info,lnkdomain-info,lnkhost-info,lnkhosthy-info,lnkcdnhost-info,lnkemail-info,youhui-info,lnkidc-info,lnkvps-info,help-info,autoweb-info,promote-info,daili-info';
-	TabTable1 = new TabTable(handles,tables,'onmouseover');
-	var url = location.toString().toLowerCase();
-	if(url.indexOf("/host_overseas.php") > -1) TabTable1.showTable('lnkhosthy','lnkhosthy-info');
-	else if(url.indexOf("/cdnhost") > -1) TabTable1.showTable('lnkcdnhost','lnkcdnhost-info');
-	else if(url.indexOf("/host") > -1) TabTable1.showTable('lnkhost','lnkhost-info');
-	else if(url.indexOf("/domain") > -1) TabTable1.showTable('lnkdomain','lnkdomain-info');
-	else if(url.indexOf("/chinesedomain") > -1) TabTable1.showTable('lnkdomain','lnkdomain-info');
-	else if(url.indexOf("/email") > -1) TabTable1.showTable('lnkemail','lnkemail-info');
-	else if(url.indexOf("/vps") > -1) TabTable1.showTable('lnkvps','lnkvps-info');
-	else if(url.indexOf("/autoweb") > -1) TabTable1.showTable('autoweb','autoweb-info');
-	else if(url.indexOf("/sms") > -1) TabTable1.showTable('help','help-info');
-	else if(url.indexOf("/promote") > -1) TabTable1.showTable('promote','promote-info');
-	else if(url.indexOf("/daili") > -1) TabTable1.showTable('daili','daili-info');
-	else TabTable1.showTable('lnkhome','lnkhome-info');
-}
-</script>
-<!--菜单script代码结束-->
+<!--body开始 --------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
 
 
 
