--- a/admin/view/default/user/moneyedit.html
+++ b/admin/view/default/user/moneyedit.html
@@ -1,31 +1,35 @@
 {{include file='common/head.html'}}
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
-<div id="container">
-<div class="head_block tb_wid2">&nbsp;增减余额</div>
-  <div class="block tb_wid2">
-    <table cellpadding=0 cellspacing=1 id="table_2">
- 	 <form  action="?c=user&a=editMoney&username={{$user.username}}" method='post'>
-      <tr>
-        <td width="99" bgcolor='#efefef' class='color01 right'>用户名</td>
-        <td width="168" class="td_bgc right_2">{{$user.username}}</td>
-      </tr>
-      <tr>
-        <td class='color01 right' bgcolor='#efefef'>当前余额</td>
-        <td class="td_bgc right_2">{{$user.money/100}}元</td>
-      </tr>
-      <tr>
-        <td class='color01 right' bgcolor='#efefef'>增减余额(元)<br></td>
-        <td class="td_bgc right_2"><input name='money' id="money" value="0"/></td>
-      </tr>
-	   <tr>
-        <td colspan="2" bgcolor='#efefef' class='color01 center td_hg' align="center"><input type="submit" value="确认" /></td>
-        </tr>
-	</form>
-    </table>
+<div align="center">
+	 <form  action="?c=user&a=editMoney&username={{$user.username}}" method='post'>
+	<div class="wid_main mar_main" align="left">
+		<div class="block_top" align="left">当前位置：用户管理 --> 增减余额</div>
+		<table class="table_main2" cellpadding="0" cellspacing="1">
+			<tr>
+				<td colspan="2" class="bg_main"><b>增减余额</b></td>
+			</tr>
+			<tr>
+				<td>用户名</td>
+				<td>{{$user.username}}</td>
+			</tr>
+			<tr>
+				<td>当前余额</td>
+				<td>{{$user.money/100}}元</td>
+			</tr>
+			<tr>
+				<td>增减余额(元)<br></td>
+				<td><input name='money' id="money" value="0"/></td>
+			</tr>
+			<tr>
+				<td colspan="2" align="center" class="hg_main"><input type="submit" value="确认" /></td>
+			</tr>
+	
+		</table>
 	<div>
 	<!--S 协议--><!--E 协议-->
 	</div>
   </div>
+  	</form>
 </div>
 </body>
 {{include file='common/foot.html'}}
