--- a/admin/view/default/top.html
+++ b/admin/view/default/top.html
@@ -21,37 +21,55 @@
         </tr>
       </table>	</td>
     <td background="{{$STATIC}}style/top_bg2.jpg" align="center">
-		<font color="#FFFFFF">
-		<SCRIPT language="javascript">
-		<!--
-		function initArray()
-		 {
-		  for(i=0;i<initArray.arguments.length;i++)
-		  this[i]=initArray.arguments[i];
-		 }
-		 var isnMonths=new initArray("1.","2.","3.","4.","5.","6.","7.","8.","9.","10.","11.","12.");
-		 var isnDays=new initArray("星期日","星期一","星期二","星期三","星期四","星期五","星期六","星期日");
-		 today=new Date();
-		 hrs=today.getHours();
-		 min=today.getMinutes();
-		 sec=today.getSeconds();
-		 clckh=""+((hrs>12)?hrs-12:hrs);
-		 clckm=((min<10)?"0":"")+min;clcks=((sec<10)?"0":"")+sec;
-		 clck=(hrs>=12)?"下午":"上午";
-		 var stnr="";
-		 var ns="0123456789";
-		 var a="";
-		
-		function getFullYear(d)
-		{
-		  yr=d.getYear();if(yr<1000)
-		  yr+=1900;return yr;}
-		  document.write("<table>");
-			document.write("<TR><TD>"+getFullYear(today)+"."+isnMonths[today.getMonth()]+""+today.getDate()+" "+isnDays[today.getDay()]+"</tr></td>");
-		  document.write("</table>");
-		//-->
-		</SCRIPT>
-		</font>	</td>
+<table width="100%" height="100%" border="0" cellpadding="0" cellspacing="0">
+          <tr>
+            <td rowspan="2">
+				<font color="#FFFFFF">
+				<SCRIPT language="javascript">
+				<!--
+				function initArray()
+				 {
+				  for(i=0;i<initArray.arguments.length;i++)
+				  this[i]=initArray.arguments[i];
+				 }
+				 var isnMonths=new initArray("1.","2.","3.","4.","5.","6.","7.","8.","9.","10.","11.","12.");
+				 var isnDays=new initArray("星期日","星期一","星期二","星期三","星期四","星期五","星期六","星期日");
+				 today=new Date();
+				 hrs=today.getHours();
+				 min=today.getMinutes();
+				 sec=today.getSeconds();
+				 clckh=""+((hrs>12)?hrs-12:hrs);
+				 clckm=((min<10)?"0":"")+min;clcks=((sec<10)?"0":"")+sec;
+				 clck=(hrs>=12)?"下午":"上午";
+				 var stnr="";
+				 var ns="0123456789";
+				 var a="";
+				
+				function getFullYear(d)
+				{
+				  yr=d.getYear();if(yr<1000)
+				  yr+=1900;return yr;}
+				  document.write("<table>");
+					document.write("<TR><TD>"+getFullYear(today)+"."+isnMonths[today.getMonth()]+""+today.getDate()+" "+isnDays[today.getDay()]+"</tr></td>");
+				  document.write("</table>");
+				//-->
+			
+				</SCRIPT>
+				</font>	
+			</td>
+            <td height="28">&nbsp;</td>
+          </tr>
+          <tr>
+            <td>
+				<div class="menu_top" align="center">
+				  <ul>
+					<li><a href="?c=session&a=logout" target='_top'><span><b>退出登陆</b></span></a></li>
+				  </ul>
+				</div>
+			</td>
+          </tr>
+        </table>
+		</td>
   </tr>
 </table>
 </body>
