--- a/admin/view/default/user/userslist.html
+++ b/admin/view/default/user/userslist.html
@@ -5,6 +5,23 @@
 		<div class="block_top" align="left">当前位置：用户管理 --> 用户列表</div>
 		<table class="table_main2" cellpadding="0" cellspacing="1">
 			<tr>
+				<td colspan="7" id="bg_yellow" align="right">
+					{{if $page>1}}
+					<a href='?c=user&a=pageUsers&page=0'>首页</a> 
+					<a href='?c=user&a=pageUsers&page={{$page-1}}'>上一页</a> 
+					{{else}}
+					首页 上一页 
+					{{/if}}
+					{{if $page!=$total_page}} 
+					<a href='?c=user&a=pageUsers&page={{$page+1}}'>下一页</a>
+					<a href='?c=user&a=pageUsers&page={{$total_page}}'>尾页</a>
+					{{else}}下一页 尾页
+					{{/if}} 
+					{{$page}}/{{$total_page}}&nbsp;
+					共计{{$count}}记录&nbsp;
+				</td>
+			</tr>
+			<tr>
 				<td colspan="7" class="bg_main"><b>用户列表</b></td>
 			</tr>
 			<tr id="bg_yellow">
