--- a/admin/view/default/changePassword.html
+++ b/admin/view/default/changePassword.html
@@ -26,7 +26,7 @@ function checkPassword()
     <form name='frm' action="?c=session&a=changePassword" method="post">
 	<div class="wid_main mar_main" align="left">
 		<div class="block_top" align="left">当前位置：帐号管理 --> 修改密码</div>
-		<table class="table_main" cellpadding="0" cellspacing="1">
+		<table class="table_main2" cellpadding="0" cellspacing="1">
 			<tr>
 				<td colspan="2" class="bg_main"><b>修改密码</b></td>
 			</tr>
