--- a/admin/view/default/adminuser/useradd.html
+++ b/admin/view/default/adminuser/useradd.html
@@ -4,7 +4,7 @@
 	<form  action="?c=adminuser&a=insert" method='post'>
 	<div class="wid_main mar_main" align="left">
 		<div class="block_top" align="left">当前位置：帐号管理 --> 增加管理员</div>
-		<table class="table_main" cellpadding="0" cellspacing="1">
+		<table class="table_main2" cellpadding="0" cellspacing="1">
 		  	<tr><td colspan="2" class="bg_main"><b>增加管理员</b></td></tr>
 			<tr>
 				<td class="wid_general">用户：</td><td><input type='text' name='username' id='tb_wid3' value="" /></td>
