--- a/admin/view/default/adminuser/userlist.html
+++ b/admin/view/default/adminuser/userlist.html
@@ -3,7 +3,7 @@
 <div align="center">
   	<div class="wid_main mar_main" align="left">
 		<div class="block_top" align="left">当前位置：帐号管理 --> 管理员</div>
-		<table class="table_main" cellpadding="0" cellspacing="1">
+		<table class="table_main2" cellpadding="0" cellspacing="1">
 			<tr>
 				<td colspan="2" class="bg_main"><a href="?c=adminuser&a=add" target='main'><b>[增加管理员]</b></a></td>
 			</tr>
@@ -12,7 +12,7 @@
 			</tr>
 			{{foreach from=$list item=row}}
 			<tr>
-				<td>{{$row.username}}</td>
+				<td class="wid_general">{{$row.username}}</td>
 				<td>
 				[<a href="javascript:if(confirm('确定删除{{$row.username}}?')){location='?c=adminuser&a=del&username={{$row.username}}';}" title="删除用户">删除用户</a>]
 				</td>
