--- a/admin/view/default/main.html
+++ b/admin/view/default/main.html
@@ -3,7 +3,7 @@
 <div align="center">
 	<div class="wid_main mar_main" align="left">
 		<div class="block_top" align="left">当前位置：帐号管理 --> 我的信息</div>
-		<table class="table_main" cellpadding="0" cellspacing="1">
+		<table class="table_main2" cellpadding="0" cellspacing="1">
 		  <tr>
 			<td colspan="2" class="bg_main"><b>我的信息</b></td>
 		  </tr>
