--- a/admin/view/default/kpanel.html
+++ b/admin/view/default/kpanel.html
@@ -6,9 +6,8 @@
 <frameset name="right" rows="64,9,*" cols="*" frameborder="no" border="0" framespacing="0">
 	<frame src="?c=index&a=top" name="top" noresize="noresize" scrolling="no">
 	<frame src="?c=index&a=controltop" name="controltop" noresize="noresize" scrolling="no">
-	<frameset cols="200,9,*" frameborder="no" border="0" framespacing="0" name="main1">
-		<frame src="?c=index&a=left" name="left" noresize="noresize">
-		<frame src="?c=index&a=controlleft" name="control" scrolling="no"> 
+	<frameset cols="210,*" frameborder="no" border="0" framespacing="0" name="main1">
+		<frame src="?c=index&a=left" name="left" scrolling="auto" noresize>
 		<frame src="?c=index&a=main" name="main" scrolling="yes">
 	</frameset>
 </frameset>
