--- a/admin/view/default/left.html
+++ b/admin/view/default/left.html
@@ -1,11 +1,10 @@
 {{include file='common/head.html'}}
-<body style="overflow-x:hidden; overflow-y:auto;">
+<body style="overflow-x:hidden;">
 <link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}style/left.css" type="text/css" media="all" />
 <link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}style/public.css" type="text/css" media="all" />
 <table cellpadding="0" cellspacing="0" class="lefttd">
 <tr><td>
 <script type="text/javascript">
-/*
 function SwitchMenu(obj,sty)
 {
 	if(document.getElementById)
@@ -14,27 +13,19 @@ function SwitchMenu(obj,sty)
 	var ml = document.getElementById(sty);
 	var ar = document.getElementById("masterdiv").getElementsByTagName("ul"); 
 	var mr = document.getElementById("masterdiv").getElementsByTagName("h1"); 
-		if(el.style.display != "block")
+		if(el.style.display == "none")
 		{ 
-			for (var i=0; i<ar.length; i++)
-			{
-				if (ar[i].className == "submenu")
-				ar[i].style.display = "none";	
-				if (mr[i].className == "menu1")
-				mr[i].className = "menu";	
-			}
 			el.style.display = "block";
-			ml.className ="menu1";
+			ml.className ="menu";
 		}
 		else
 		{
 			el.style.display = "none";
-			ml.className ="menu";
+			ml.className ="menu1";
 		}
 	}
 	
 }
-*/
 </script>
 <div id="masterdiv">
 	<h1 id="m2" onClick="SwitchMenu('sub2','m2')" class="menu"><ol id="p2">{{$lang.account_manage}}</ol></h1>
