--- a/admin/view/default/setting/setFrom.html
+++ b/admin/view/default/setting/setFrom.html
@@ -1,18 +1,24 @@
 {{include file='common/head.html'}}
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
 <div>
-<form  action="?c=setting&a=index" method='post'>
-  	<tr>
-        <td >支付方式：</td>
-        <td >
-        <input type="radio" name="sub" value="alipay" checked="checked" />支付宝
-		<input type="radio" name="sub" value="alipay" />网银在线</td>
+	<form  action="?c=setting&a=index" method='post'>
+	
+		<table class="table_main2" cellpadding="0" cellspacing="1">
+	  	<tr>
+	        <td >支付方式：</td>
+	        <td >
+	        <input type="radio" name="sub" value="alipay" checked="checked" />支付宝
+			<input type="radio" name="sub" value="alipay" />网银在线
+			</td>
 		</tr>
-	<tr>
-		<td >
-		<input type='submit' value='确定'>		
-		</td>
+		
+		<tr>
+			<td >
+			<input type='submit' value='确定'>		
+			</td>
 		</tr>
+		
+		</table>
 	</form>
 
 
