--- a/admin/view/default/setting/setother.html
+++ b/admin/view/default/setting/setother.html
@@ -10,6 +10,13 @@
 		        <input type="checkbox" name="set_renew" value="1" {{if $setting.set_renew==1}}checked{{/if}} />
 		        </td>
 		        </tr>
+		    <tr>
+		        <td >过期空间数据保存天数：</td>
+		        <td >
+		        <input type="text" name="expire_save_day" value="{{if $setting.expire_save_day}}{{$setting.expire_save_day}}{{else}}30{{/if}}"  size="10"/>
+		        </td>
+		        </tr> 
+		        
 			<tr>
 				<td></td>
 				<td>
