fix host/index.html is web && db_quota

--- a/user/view/default/public/index.html
+++ b/user/view/default/public/index.html
@@ -64,21 +64,67 @@
 						<b>{{if $products[$i].name}}{{$products[$i].name}}{{else}}暂无{{/if}}</b>
 					</td>
 			  </tr>
+			  
 			  <tr><td class="right_h right_wid right_blue" width="60">
-					空间大小：{{if $products[$i].web_quota}}{{$products[$i].web_quota}}M{{else}}暂无{{/if}}
+					空间大小：
+					{{if $products[$i].web_quota}}
+						{{if $products[$i].web_quota > 1024}}
+							{{number_format($products[$i].web_quota/1024,2)}}G
+						{{else}}
+							{{$products[$i].web_quota}}M
+						{{/if}}
+					{{else}}
+						0
+					{{/if}}
 			  </td></tr>
-			  <tr><td class="right_h right_wid right_blue" width="60">数据库：{{$products[$i].db_quota}}M</td></tr>
-			  <tr><td class="right_h right_blue">连接数：{{if $products[$i].max_connect==0}}不限{{else}}{{$products[$i].max_connect}}{{/if}}</td></tr>
+			  
+			  <tr><td class="right_h right_wid right_blue" width="60">
+			  	数据库：
+			  		{{if $products[$i].db_quota}}
+						{{if $products[$i].db_quota > 1024}}
+							{{number_format($products[$i].db_quota/1024,2)}}G
+						{{else}}
+							{{$products[$i].db_quota}}M
+						{{/if}}
+					{{else}}
+						0
+					{{/if}}
+			  </td></tr>
+			  
+			  <tr><td class="right_h right_blue">
+			  	连接数：
+			  	{{if $products[$i].max_connect==0}}
+			  		不限
+			  	{{else}}
+			  		{{$products[$i].max_connect}}
+			  	{{/if}}
+			  </td></tr>
+			  
 			  <tr><td class="right_h">支持：html,{{$products[$i].templete}}</td></tr>
-			  <tr><td class="right_h">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
-			  <tr>
-				<td class="right_h">价格：<span class="color_red"><b>{{if $products[$i].show_price==1}}{{substr($products[$i].price/100/12,0,6)}}元/月{{else}}{{$products[$i].price/100}}元/年{{/if}}</b></span></td>
-			  </tr>
+			  <tr><td class="right_h">
+			  	子目录绑定：
+			  	{{if $products[$i].subdir}}
+			  		支持
+			  	{{else}}
+			  		无
+			  	{{/if}}
+			  </td></tr>
+			  
+			  <tr><td class="right_h">
+				价格：<span class="color_red"><b>
+				{{if $products[$i].show_price==1}}
+					{{substr($products[$i].price/100/12,0,6)}}元/月
+				{{else}}
+					{{$products[$i].price/100}}元/年
+				{{/if}}
+				</b></span></td></tr>
+			 
 			  <tr><td class="right_r right_hg3" colspan="2">
 				<a href="?c=product&a=sellForm&product=vhost_{{$products[$i].id}}">
 				<img src="{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
 				<a href="?c=host&a=showProductFrom&product_id={{$products[$i].id}}"><img src="{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
 			  </tr>
+			  
 		 	 </table>
 
 			</div>
