--- a/user/view/default/host/index.html
+++ b/user/view/default/host/index.html
@@ -58,7 +58,7 @@
 					  		{{/if}}
 					  </td></tr>
 					  
-					  <tr><td class="right_h">支持：html,{{$products[$i].templete}}</td></tr>
+					  <tr><td class="right_h">支持：{{$products[$i].templete}}</td></tr>
 					  
 					  <tr><td class="right_h">子目录绑定： {{if $products[$i].subdir}}支持{{else}}无{{/if}}</td></tr>
 					
