--- a/user/view/default/public/index.html
+++ b/user/view/default/public/index.html
@@ -100,7 +100,7 @@
 			  	{{/if}}
 			  </td></tr>
 			  
-			  <tr><td class="right_h">支持：html,{{$products[$i].templete}}</td></tr>
+			  <tr><td class="right_h">支持：{{$products[$i].templete}}</td></tr>
 			  <tr><td class="right_h">
 			  	子目录绑定：
 			  	{{if $products[$i].subdir}}
