--- a/admin/view/default/vhost/pagelistexprie.html
+++ b/admin/view/default/vhost/pagelistexprie.html
@@ -10,8 +10,8 @@
 					<span class="topimg STYLE1">查询过期天数:</span>
 					<input name="day" type="text" id="day" value="1" size="8">
 					<select name="status">
-						<option value='0' >正常使用</option>
-						<option value='1' >已暂停使用</option>
+						<option value='0' {{if $status==0}}selected{{/if}}>正常使用</option>
+						<option value='1' {{if $status==1}}selected{{/if}}>已暂停使用</option>
 					</select>
 					<input type="submit" name="Submit" value="搜索">
 				</td>
