--- a/admin/view/default/mail/index.html
+++ b/admin/view/default/mail/index.html
@@ -6,6 +6,7 @@
 <div align="center">
 	<div class="wid_main mar_main" align="left">
 		<div class="block_top" align="left">当前位置：邮件群发--> 邮件群发设置</div>
+		<div align='center'><a href="?c=mail&a=sendMailFrom">群发邮件</a></div>
 		<form name='nodeform' action="?c=mail&a=setMail" method="post">
 		<table class="table_main2" cellpadding="0" cellspacing="1">
 			
