--- a/admin/view/default/mail/send.html
+++ b/admin/view/default/mail/send.html
@@ -28,7 +28,7 @@ function send()
 				<td><textarea name='mail_body'  id='body' rows='10' cols='88'></textarea></td></tr>
 				
 			<tr><td>&nbsp;</td>
-				<td ><input type='button' onclick="send();" value="确认提交"></td></tr>
+				<td ><input type='button' onclick="send();" value="发送"></td></tr>
 				
 		</table>
 </div> 	
