--- a/admin/view/default/mail/index.html
+++ b/admin/view/default/mail/index.html
@@ -12,7 +12,7 @@
 			
 			<tr><td colspan="2" class="bg_main">邮件设置</td></tr>
 			
-			<tr><td>是否开启邮件群发：</td>
+			<tr><td class="wid_general">开启邮件群发：</td>
 		        <td><input type="checkbox" name="set_mail" value="1" {{if $setting.set_mail==1}}checked{{/if}} /></td></tr>
 		     
 			<tr><td class="wid_general">邮件主机：</td>
