--- a/admin/view/default/vhostproduct/addProduct.html
+++ b/admin/view/default/vhostproduct/addProduct.html
@@ -81,161 +81,121 @@ function changeNode()
 	var url = '?c={{$smarty.request.c}}&a=ajaxListTemplete&node='+nodeform.node.value;
 	ajax_open_url(url,list_templete_result);
 }
+function change_cdn(val)
+{
+	if(val==0){$('cdnpanel').style.display='';}
+	 else {	$('cdnpanel').style.display='none';}
+}
 </script>
 <div align="center">
 	<div class="wid_main mar_main" align="left">
 		<div class="block_top" align="left">当前位置：虚拟主机/cdn --> {{if $action=='editProduct'}}修改产品{{else}}增加产品{{/if}}</div>
 		<form name='nodeform' action="?c=vhostproduct&a={{$action}}&id={{$vhostproduct.id}}" method="post">
 		<table class="table_main2" cellpadding="0" cellspacing="1">
-			<tr>
-				<td colspan="2" class="bg_main hg_main"><b>{{if $action=='editProduct'}}修改产品{{else}}增加产品{{/if}}</b></td>
-			</tr>
-			<tr>
-				<td class="wid_general">选择主机</td>
+			<tr><td colspan="2" class="bg_main hg_main"><b>{{if $action=='editProduct'}}修改产品{{else}}增加产品{{/if}}</b></td></tr>
+			
+			<tr><td class="wid_general">选择主机</td>
 				<td><select name='node' onChange='changeNode()'>
 					{{foreach from=$nodes item=node}}
 					<option value='{{$node.name}}'
 						{{if $node.name==$vhostproduct.node}}selected{{/if}}>{{$node.name}}</option>
-					{{/foreach}}
-					</select>
-				</td>
-			</tr>
-			<tr>
-				<td>产品名称：</td>
-				<td><input name='name' type='text' id='tb_wid3' value="{{$vhostproduct.name}}" size="16"></td>
-			</tr>
-			<tr>
-				<td>显示顺序：</td>
-				<td><input name='view' type='text' id='tb_wid3'	value="{{$vhostproduct.view}}" size="16"></td>
-			</tr>
-			<tr>
-				<td>产品组：</td>
-				<td><input name='upid' type='text' value="{{intval($vhostproduct.upid)}}" size="3">(可升级到相同产品组的其它产品，设置为0不可升级)</td>
-			</tr>
-			<tr>
-				<td>产品类型：</td>
-				<td>
-					<script language='javascript'>
-						function change_cdn(val)
-						{
-							if(val==0){
-								$('cdnpanel').style.display='';
-							} else {
-								$('cdnpanel').style.display='none';
-							}
-						}
-					</script>
-					<input name='cdn' type='radio'	value="0" {{if !$vhostproduct || $vhostproduct.cdn==0}} checked {{/if}} onClick="change_cdn(0)">虚拟主机
-					<input name='cdn' type='radio'	value="1" {{if $vhostproduct.cdn==1}} checked {{/if}} onClick="change_cdn(1)">cdn(收费版才有此功能)
-				</td>
-			</tr>
-			<tr>
-				<td colspan='2' style="padding-left:0px;">
+					{{/foreach}}</select></td></tr>
+			
+			<tr><td>产品名称：</td>
+				<td><input name='name' type='text' id='tb_wid3' value="{{$vhostproduct.name}}" size="16"></td></tr>
+			
+			<tr><td>显示顺序：</td>
+				<td><input name='view' type='text' id='tb_wid3'	value="{{$vhostproduct.view}}" size="16"></td></tr>
+			
+			<tr><td>产品组：</td>
+				<td><input name='upid' type='text' value="{{intval($vhostproduct.upid)}}" size="3">(可升级到相同产品组的其它产品，设置为0不可升级)</td></tr>
+			
+			<tr><td>产品类型：</td>
+				<td><input name='cdn' type='radio'	value="0" {{if !$vhostproduct || $vhostproduct.cdn==0}} checked {{/if}} onClick="change_cdn(0)">虚拟主机
+					<input name='cdn' type='radio'	value="1" {{if $vhostproduct.cdn==1}} checked {{/if}} onClick="change_cdn(1)">cdn(收费版才有此功能)</td></tr>
+			
+			<tr><td colspan='2' style="padding-left:0px;">
 					<div id='cdnpanel' style='display:{{if $vhostproduct.cdn==1}}none{{/if}}'>
 						<table class="table_main3" cellpadding="0" cellspacing="1">
-							<tr>
-								<td class="wid_general">空间大小(M)：</td>
-								<td><input name="web_quota" type="text" id='tb_wid3' value="{{$vhostproduct.web_quota}}" size="16"></td>
-							</tr>
-							<tr>
-								<td>数据库大小(M)：</td>
-								<td><input name="db_quota" type="text" id='tb_wid3' value="{{$vhostproduct.db_quota}}"></td>
-							</tr>
+							<tr><td class="wid_general">空间大小：</td>
+								<td><input name="web_quota" type="text" id='tb_wid3' value="{{$vhostproduct.web_quota}}" size="16">&nbsp;M</td></tr>
 							
-								<tr>
-								<td>数据库类型(M)：</td>
-								<td>
-								<input name="db_type" type="radio" value="mysql" {{if $vhostproduct.db_type!='sqlsrv'}}checked{{/if}}>mysql
-								<input name="db_type" type="radio" onclick="alert('请确认该节点已安装sql server服务');" value="sqlsrv"{{if $vhostproduct.db_type=='sqlsrv'}}checked{{/if}}>sql server
-								</td>
-							</tr>
+							<tr><td>数据库大小：</td>
+								<td><input name="db_quota" type="text" id='tb_wid3' value="{{$vhostproduct.db_quota}}">&nbsp;M</td></tr>
 							
-							<tr>
-								<td>绑定子目录</td>
-								<td><input type='checkbox' name='subdir_flag' value='1' {{if $vhostproduct.subdir_flag}}checked{{/if}}>允许绑定子目录</td>
-							</tr>
+							<tr><td>数据库类型：</td>
+								<td><input name="db_type" type="radio" value="mysql" {{if $vhostproduct.db_type!='sqlsrv'}}checked{{/if}}>mysql
+									<input name="db_type" type="radio" onclick="alert('请确认该节点已安装sql server服务');" value="sqlsrv"{{if $vhostproduct.db_type=='sqlsrv'}}checked{{/if}}>sql server</td></tr>
 							
-							<tr>
-								<td>默认绑定子目录:</td>
-								<td><input name="subdir" type="text" id='tb_wid3' value="{{if $vhostproduct.subdir}}{{$vhostproduct.subdir}}{{else}}wwwroot{{/if}}" size="16"></td>
-							</tr>
-							<tr>
-								<td>模板</td>
+							<tr><td>绑定子目录</td>
+								<td><input type='checkbox' name='subdir_flag' value='1' {{if $vhostproduct.subdir_flag}}checked{{/if}}>允许绑定子目录</td></tr>
+							
+							<tr><td>子目录个数</td>
+								<td><input type='text' name='max_subdir' size="12" value='{{if $vhostproduct.max_subdir}}{{$vhostproduct.max_subdir}}{{else}}0{{/if}}'>&nbsp;0表示不限制</td></tr>
+							
+							<tr><td>默认绑定子目录:</td>
+								<td><input name="subdir" type="text" id='tb_wid3' value="{{if $vhostproduct.subdir}}{{$vhostproduct.subdir}}{{else}}wwwroot{{/if}}" size="16"></td></tr>
+							
+							<tr><td>模板</td>
 								<td id='templete2'>
 									<div id='templete'><input name="templete" type="text" value="{{$vhostproduct.templete}}"></div>
-									<div id='subtemplete'></div>
-								</td>
-							</tr>
-							<tr>
-								<td>多引擎切换:</td>
-								<td>
-									<input type='radio' name="cs" value="0" {{if $vhostproduct.cs==0}}checked{{/if}} size="16">不能切换
+									<div id='subtemplete'></div></td></tr>
+							
+							<tr><td>多引擎切换:</td>
+								<td><input type='radio' name="cs" value="0" {{if $vhostproduct.cs==0}}checked{{/if}} size="16">不能切换
 									<input type='radio' name="cs" value="1" {{if $vhostproduct.cs==1}}checked{{/if}} size="16">随时切换
-									<input type='radio' name="cs" value="2" {{if !$vhostproduct || $vhostproduct.cs==2}}checked{{/if}} size="16">购买时切换
-								</td>
-							</tr>
-					  </table>
+									<input type='radio' name="cs" value="2" {{if !$vhostproduct || $vhostproduct.cs==2}}checked{{/if}} size="16">购买时切换</td></tr>
+					  	</table>
 					</div>
 				</td>
 			</tr>
-			<tr>
-				<td>价格(元/年)</td>
-				<td>
-				<input name="price" type="text" id='tb_wid3' value="{{$vhostproduct.price/100}}">
-				<input type="checkbox" name="show_price" value="1" {{if $vhostproduct.show_price!=0}}checked{{/if}}>前台按月显示</td>
-			</tr>
-			{{if count($agent_ids)>0}}
-			<tr>
-				<td>代理价格</td>
-				<td>
-				{{for $i=0;$i< count($agent_ids);$i++}}
-					{{$agent_ids[$i].name}}:<input name="agentprice_{{$agent_ids[$i].id}}" type="text" id='tb_wid3' value="{{$agent_ids[$i].price/100}}" style="width:45px" />
-				{{/for}}
-				</td>
-			</tr>
-			{{/if}}
-			<tr>
-				<td>域名绑定个数(-1表示无限)</td>
-				<td><input name="domain" type="text" id='tb_wid3' value="{{if $vhostproduct}}{{$vhostproduct.domain}}{{else}}-1{{/if}}"></td>
-			</tr>
-			<tr>
-				<td>最大连接数(0无限)</td>
-				<td><input name="max_connect" type="text" size='5' value="{{if $vhostproduct}}{{$vhostproduct.max_connect}}{{else}}0{{/if}}"></td>
-			</tr>
-			<tr>
-				<td>带宽限制(0无限)</td>
-				<td><input name="speed_limit" type="text" size='5' value="{{if $vhostproduct}}{{$vhostproduct.speed_limit/1024}}{{else}}0{{/if}}">&nbspK/每秒</td>
-			</tr>
 			
-			<tr>
-				<td>管理变量:</td>
-				<td><input name="envs" type="text" id='tb_wid3'	value="{{$vhostproduct.envs}}" size="40"></td>
-			</tr>
-			<tr>
-				<td>其它选项</td>
-				<td>
-					<input type='checkbox' name='htaccess' value='1' {{if $vhostproduct.htaccess || !$vhostproduct}}checked{{/if}}>.htaccess支持
+			<tr><td>价格</td>
+				<td><input name="price" type="text" id='tb_wid3' value="{{$vhostproduct.price/100}}">(元/年)
+					<input type="checkbox" name="show_price" value="1" {{if $vhostproduct.show_price!=0}}checked{{/if}}>前台按月显示</td></tr>
+			{{if count($agent_ids)>0}}
+			<tr><td>代理价格</td>
+				<td>{{for $i=0;$i< count($agent_ids);$i++}}
+						{{$agent_ids[$i].name}}:<input name="agentprice_{{$agent_ids[$i].id}}" type="text" id='tb_wid3' value="{{$agent_ids[$i].price/100}}" style="width:45px" />
+					{{/for}}</td></tr>
+			{{/if}}
+			
+			<tr><td>域名绑定个数</td>
+				<td><input name="domain" type="text" id='tb_wid3' value="{{if $vhostproduct}}{{$vhostproduct.domain}}{{else}}-1{{/if}}">(-1表示无限)</td></tr>
+			
+			<tr><td>最大连接数</td>
+				<td><input name="max_connect" type="text" size='12' value="{{if $vhostproduct}}{{$vhostproduct.max_connect}}{{else}}0{{/if}}">(0无限)</td></tr>
+			
+			<tr><td>带宽限制</td>
+				<td><input name="speed_limit" type="text" size='12' value="{{if $vhostproduct}}{{$vhostproduct.speed_limit/1024}}{{else}}0{{/if}}">&nbspK/每秒,(0无限)</td></tr>
+			
+			<tr><td>管理变量:</td>
+				<td><input name="envs" type="text" id='tb_wid3'	value="{{$vhostproduct.envs}}" size="40"></td></tr>
+			
+			<tr><td>其它选项</td>
+				<td><input type='checkbox' name='htaccess' value='1' {{if $vhostproduct.htaccess || !$vhostproduct}}checked{{/if}}>.htaccess支持
 					<input type='checkbox' name='ftp' value='1' {{if $vhostproduct.ftp || !$vhostproduct}}checked{{/if}}>开启ftp
 					<input type='checkbox' name='log_file' value='1' {{if $vhostproduct.log_file || !$vhostproduct}}checked{{/if}}>日志独立
 					<input type='checkbox' name='access' value='1' {{if $vhostproduct.access || !$vhostproduct}}checked{{/if}}>自定义控制
-				</td>
-			</tr>
-			<tr>
-				<td>产品说明(支持html):</td>
-				<td><textarea name='describe' rows='6' cols='40'>{{$vhostproduct.describe}}</textarea></td>
-			</tr>
+					<input type='checkbox' name='log_handle' id='log_handle' value='1'{{if $vhostproduct.log_handle}}checked{{/if}}>日志分析</td></tr>
 			
-			<tr>
-				<td>状态</td>
-				<td>
-					<input type="checkbox" name="pause_flag" value="1" {{if $vhostproduct.pause_flag!=0}}checked{{/if}}>暂停销售
-					<input type="checkbox" name="month_flag" value="1" {{if $vhostproduct.month_flag!=0}}checked{{/if}}>月付
-				</td>
-			</tr>
-			<tr>
-				<td>&nbsp;</td>
-				<td><input type="submit" value="确认提交"></td>
-			</tr>
+			<tr><div id='advance'>
+				<td class="padd23">独立队列:</td>
+				<td class="padd23">
+					工作数(0不限):
+					<input name="max_worker" type="text" id='max_worker' size='5' value="{{if $vhostproduct.max_worker}}{{$vhostproduct.max_worker}}{{else}}0{{/if}}">
+					队列数(0不限):
+					<input name="max_queue" type="text" id='max_queue' size='5' value="{{if $vhostproduct.max_queue}}{{$vhostproduct.max_queue}}{{else}}0{{/if}}">(需kangle web server商业版支持)</td></div></tr>
+			
+			<tr><td>产品说明(支持html):</td>
+				<td><textarea name='describe' rows='6' cols='40'>{{$vhostproduct.describe}}</textarea></td></tr>
+			
+			<tr><td>状态</td>
+				<td><input type="checkbox" name="pause_flag" value="1" {{if $vhostproduct.pause_flag!=0}}checked{{/if}}>暂停销售
+					<input type="checkbox" name="month_flag" value="1" {{if $vhostproduct.month_flag!=0}}checked{{/if}}>月付	</td></tr>
+			
+			<tr><td>&nbsp;</td>
+				<td><input type="submit" value="确认提交"></td></tr>
 		</table>
 		</form>
 	</div>
