--- a/admin/view/default/vhostproduct/addProduct.html
+++ b/admin/view/default/vhostproduct/addProduct.html
@@ -125,13 +125,13 @@ function change_cdn(val)
 							
 							<tr><td>数据库类型：</td>
 								<td><input name="db_type" type="radio" value="mysql" {{if $vhostproduct.db_type!='sqlsrv'}}checked{{/if}}>mysql
-									<input name="db_type" type="radio" onclick="alert('请确认该节点已安装sql server服务');" value="sqlsrv"{{if $vhostproduct.db_type=='sqlsrv'}}checked{{/if}}>sql server</td></tr>
+									<input name="db_type" type="radio" onClick="alert('请确认该节点已安装sql server服务');" value="sqlsrv"{{if $vhostproduct.db_type=='sqlsrv'}}checked{{/if}}>sql server</td></tr>
 							
 							<tr><td>绑定子目录</td>
 								<td><input type='checkbox' name='subdir_flag' value='1' {{if $vhostproduct.subdir_flag}}checked{{/if}}>允许绑定子目录</td></tr>
 							
 							<tr><td>子目录个数</td>
-								<td><input type='text' name='max_subdir' size="12" value='{{if $vhostproduct.max_subdir}}{{$vhostproduct.max_subdir}}{{else}}0{{/if}}'>&nbsp;0表示不限制</td></tr>
+								<td><input type='text' name='max_subdir' size="17" value='{{if $vhostproduct.max_subdir}}{{$vhostproduct.max_subdir}}{{else}}0{{/if}}'>&nbsp;0表示不限制</td></tr>
 							
 							<tr><td>默认绑定子目录:</td>
 								<td><input name="subdir" type="text" id='tb_wid3' value="{{if $vhostproduct.subdir}}{{$vhostproduct.subdir}}{{else}}wwwroot{{/if}}" size="16"></td></tr>
